Adds About Me Section, cleans up some nav bar issues

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <header class="header">
         <div class="left-content">
-            <h1>Bradley Troll</h1>
+            <h2>Bradley Troll</h2>
             <img class="my-pic" src="./assets/IMG_5192.jpeg">
+            <h1>Web Design Services</h1>
         </div>
         <nav class="links">
             <ul class="nav-links">
@@ -20,7 +21,19 @@
             </ul>
         </nav>
     </header>
+    <div>large image</div>
+    <div class="about-me">
+        <h1>About<br>Me</h1>
+        <p>Welcome to my first Portfolio site. It may seem a bit basic right now, but as I progress through Coding Bootcamp, I expect this page to look far more professional. For the past 15 years, I've taught high school English, which has had its up and downs. Now I find myself teaching in a state that seeks to limit access to educational opportunities (and a fair wage for teachers). I'm hoping to transition into the world of coding and web design over the next year. </p>
+        <!-- <img src="./assets/btroll.jpg" alt="Bradley Troll"> -->
     
+    </div>
+    <div class="portfolio">
+        Portfolio - Should inclucde 5 images of projects. The first image should be larger in size than the others (generic as these are not done)
+    </div>
+    <div class="contact">
+        Contact Me - Should include links to email, telephone number, github
+    </div>
     
 </body>
 </html>
