Adds Portfolio section with 4 photos. None have working links.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,22 @@
         <!-- <img src="./assets/btroll.jpg" alt="Bradley Troll"> -->
     
     </div>
+    <div><br> </div>
     <div class="portfolio">
-        Portfolio - Should inclucde 5 images of projects. The first image should be larger in size than the others (generic as these are not done)
+        <h1>Portfolio</h1>
+        <div class="main-photo">
+            <img class ="m-photo" src="./assets/generic-image-placeholder.webp" alt="Main Photo">
+          </div>
+          <div class="secondary-photos">
+            <div class="row">
+              <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 2">
+              <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 3">
+            </div>
+            <div class="row">
+              <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 4">
+              <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 5">
+            </div>
+          </div>
     </div>
     <div class="contact">
         Contact Me - Should include links to email, telephone number, github
