Makes minor changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="nav-links">
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -31,6 +31,8 @@
     <div><br> </div>
     <div class="portfolio" id="portfolio">
         <h1>Portfolio</h1>
+        <div><br></div>
+        <h2>Featured Project:</h2>
         <div><br></div>
         <figure class="main-photo">
             <a href="https://bradleytroll.github.io/module_1_challenge/" target="_blank">
