Adds text overlays to the portfolio images

--- a/index.html
+++ b/index.html
@@ -35,34 +35,43 @@
         <h2>Featured Project:</h2>
         <div><br></div>
         <figure class="main-photo">
-            <a href="https://bradleytroll.github.io/module_1_challenge/" target="_blank">
+            <div class="photo-container">
                 <img class="m-photo" src="./assets/Screenshot 2024-01-05 at 6.13.41 PM.png" alt="Main Photo">
-                <figcaption>Our first project asked us to achieve maximum search engine optimization by using semantic code. Review the HTML in dev tools to see the work.</figcaption>
-            </a>
+                <div class="bottom-left">Search Engine Optimization</div>
+            </div>
+            <figcaption>Our first project asked us to achieve maximum search engine optimization by using semantic code. Review the HTML in dev tools to see the work.</figcaption>
         </figure>
         <div class="secondary-photos">
             <div class="row">
                 <figure>
-                    <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 2">
-                    <figcaption>Coming Soon!</figcaption>
+                    <div class="photo-container">
+                        <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 2">
+                        <figcaption class="overlay-text">Coming Soon!</figcaption>
+                    </div>
                 </figure>
                 <figure>
-                    <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 3">
-                    <figcaption>Coming Soon!</figcaption>
+                    <div class="photo-container">
+                        <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 3">
+                        <figcaption class="overlay-text">Coming Soon!</figcaption>
+                    </div>
                 </figure>
             </div>
             <div class="row">
                 <figure>
-                    <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 4">
-                    <figcaption>Coming Soon!</figcaption>
+                    <div class="photo-container">
+                        <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 4">
+                        <figcaption class="overlay-text">Coming Soon!</figcaption>
+                    </div>
                 </figure>
                 <figure>
-                    <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 5">
-                    <figcaption>Coming Soon!</figcaption>
+                    <div class="photo-container">
+                        <img class="sec-photo" src="./assets/generic-image-placeholder.webp" alt="Photo 5">
+                        <figcaption class="overlay-text">Coming Soon!</figcaption>
+                    </div>
                 </figure>
             </div>
         </div>
-    </div>
+    </div>        
     <div><br> </div>
     <div class="contact" id="contact">
         <h1>Contact<br>Me</h1>  
