Restores link in main photo

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <div><br></div>
         <figure class="main-photo">
             <div class="photo-container">
-                <img class="m-photo" src="./assets/Screenshot 2024-01-05 at 6.13.41 PM.png" alt="Main Photo">
+                <a href="https://bradleytroll.github.io/module_1_challenge/" target="_blank">
+                <img class="m-photo" src="./assets/screenshot.png" alt="Main Photo">
                 <div class="bottom-left">Search Engine Optimization</div>
+            </a>
             </div>
             <figcaption>Our first project asked us to achieve maximum search engine optimization by using semantic code. Review the HTML in dev tools to see the work.</figcaption>
         </figure>
@@ -71,7 +73,7 @@
                 </figure>
             </div>
         </div>
-    </div>        
+    </        
     <div><br> </div>
     <div class="contact" id="contact">
         <h1>Contact<br>Me</h1>  
