Fixes small div break issue

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </figure>
             </div>
         </div>
-    </        
+    </div>        
     <div><br> </div>
     <div class="contact" id="contact">
         <h1>Contact<br>Me</h1>  
